@@ -26,7 +26,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [macos-11, windows-2022, ubuntu-22.04]
+        os: [macos-11, macos-14, windows-2022, ubuntu-22.04]
     steps:
       # Setup environment
       - uses: actions/checkout@v4
@@ -73,7 +73,7 @@ jobs:
           echo "QT_QPA_PLATFORM=xcb" >> $GITHUB_ENV
 
       - name: Prepare macOS
-        if: matrix.os  == 'macos-11'
+        if: matrix.os  == 'macos-11' || matrix.os == 'macos-14'
         run: |
           brew install pkg-config tesseract tesseract-lang dylibbundler
           brew info tesseract
@@ -119,7 +119,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [macos-11, windows-2022, ubuntu-22.04]
+        os: [macos-11, macos-14, windows-2022, ubuntu-22.04]
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
@@ -137,7 +137,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [macos-11, windows-2022, ubuntu-22.04]
+        os: [macos-11, macos-14, windows-2022, ubuntu-22.04]
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
@@ -241,7 +241,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-22.04, macos-11, windows-2022]
+        os: [macos-11, macos-14, windows-2022, ubuntu-22.04]
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
