@@ -15,6 +15,7 @@
 - Linux: Auto-remove screenshot file from pictures-directory on Wayland. Thanks, [@PavelDobCZ23](https://github.com/PavelDobCZ23)! ([#600](https://github.com/dynobo/normcap/issues/600))
 - Linux: Fix `grim` being tried for screenshots on non-compatible compositors.
 - MacOS: Fix crash on start. ([#584](https://github.com/dynobo/normcap/issues/586))
+- MacOS: Add automated build for M1. ([#636](https://github.com/dynobo/normcap/issues/636))
 
 ## v0.5.4 (2024-01-15)
 
